--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -4,8 +4,9 @@
   padding: 20px;
   max-width: 800px;
   margin: auto;
-  background-color: #f9f9f9;
+  background-color: transparent;
   border-radius: 8px;
+  width: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
