--- a/src/Components/MyBlogs/MyBlogs.css
+++ b/src/Components/MyBlogs/MyBlogs.css
@@ -1,5 +1,6 @@
 .my-blogs-container {
   padding: 20px;
+  position: relative;
 }
 
 .my-blogs-title {
@@ -64,7 +65,6 @@
   max-width: 800px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: relative;
-  overflow: hidden;
 }
 
 .edit-blog-form .form-group {
